# job_hunting_ai

./: Readme.md
microservices/personal_info/api/: .gitignore  pyproject.toml  ruff.toml
microservices/personal_info/api/app/: main.py
microservices/personal_info/api/tests/: test_init.py
